-- more cleanup and bug fixes - fixed memory leak issues with native processes - need to finish Master Daemon cleanup and fixes